# btcnode-metrics

./: .gitignore  Cargo.toml  README.md  config.local.toml  prompt.md
.github/workflows/: rust-ci.yml
linux/: SystemD-service.md  create-user_btcnode_metrics.sh  update-config-file.sh
linux/etc/systemd/system/: btcnode-metrics.service
src/: main.rs  state.rs
src/btcnode_metrics_gatherer/: collector.rs  config.rs  metrics.rs  node.rs  service.rs
