[package]
name = "btcnode-metrics"
edition = "2024"
version = "2.0.0"
description = "The Bitcoin node metrics exporter for Prometheus based on Rust Bitcoin Community's crate for Bitcoin JSON-RPC."
license-file = "LICENSE"
homepage = "https://github.com/AltaModaTech/btcnode-metrics"
repository = "https://github.com/AltaModaTech/btcnode-metrics"
readme = "README.md"
keywords = ["bitcoin", "prometheus", "metrics"]

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
prometheus = "0.14"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
toml = "1"
anyhow = "1"
corepc-client = { version = "0.10", features = ["client-sync"] }
thiserror = "2"
